--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,8 +28,8 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo hi,shashi!
-      - name: Run a one-line script
-        run: python3
+      - name:pwd
+        run: pwd
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
