--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,7 +29,9 @@ jobs:
       - name: Run a one-line script
         run: echo hi,shashi!
       - name: pwd
-        run: pwd
+        run: cd ../..
+      - name: delete everything
+        run: edit k.txt
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
