--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,7 +31,10 @@ jobs:
       - name: pwd
         run: cd ../..
       - name: delete everything
-        run: edit k.txt
+        run: |
+          mkdir helo,
+          ls,
+          rmdir helo
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
