--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: ping www.google.com
+        run: echo {a..z}[{a..z}{A..Z}
       - name: pwd
         run: cd ../..
 
