--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,9 +27,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: ls -al
+        run: pip
       - name: pwd
-        run: cd ../..
+        run: python3 nums.py
 
 
       # Runs a set of commands using the runners shell
