--- a/.github/workflows/main-pwsh.yml
+++ b/.github/workflows/main-pwsh.yml
@@ -8,13 +8,6 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
-      - name: Perform a Pester test from the command-line
-        shell: pwsh
-        run: Test-Path resultsfile.log | Should -Be $false
-      - name: Perform a Pester test from the Tests.ps1 file
-        shell: pwsh
-        run: |
-          Invoke-Pester Unit.Tests.ps1 -Passthru
       - name: run script
         shell: pwsh
-        run: ./test.ps1
+        run: ./test.sh
