--- a/.github/workflows/main-pwsh.yml
+++ b/.github/workflows/main-pwsh.yml
@@ -10,4 +10,4 @@ jobs:
         uses: actions/checkout@v3
       - name: run script
         shell: pwsh
-        run: ./test.sh
+        run: sh test.sh
